--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
-.App {
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+.navbar{
+  width: 100%;
+  height: 10vh;
+  background:black;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.footer{
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background:black;
+  color: white;
+}
+
+.clothes-list{
+  min-height: 80vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  justify-items: center;
   text-align: center;
+
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.favorites{
+  min-height: 80vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  justify-items: center;
+  text-align: center;
+  
+
+}
+.ClothesDetails{
+  min-height: 80vh;
+  width: 100%;
+  align-items: center;
+  justify-content: space-evenly;
+  /* text-align: center; */
+  display: flex;
+  padding: 10px;
+
+}
+h1{
+  font-size: 33px;
+}
+h2{
+  font-size: 28px;
+}
+h3{
+  font-size: 22px;
+}
+.cloth-poster{
+  margin: 0px 10px;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+img{
+  width: 300px;
+  height: 300px;
+  transition: all 0.3s ease;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+img:hover{
+  transform: scale(1.1);
+}
+a{
+  color: white;
+  text-decoration: none;
+  font-size: 27px;
+  font-weight: bold;
+}
+.cloth{
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+}
+button{
+  padding: 10px;
+  background-color: black;
   color: white;
-}
+  width: 100%;
+  border-radius: 5px;
+  margin: 30px 0;
+  width: 300px;
+  font-size: 20px;
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
